ChamplainView: Handle CLUTTER_SCROLL_SMOOTH

In latest Clutter more devices reports scroll using
the CLUTTER_SCROLL_SMOOTH direction. This means that the
scroll to zoom functionality stopped working for Maps.

Not handling the CLUTTER_SCROLL_SMOOTH in Champlain has
always been a buglet. It gets more serious now that we
get CLUTTER_SCROLL_SMOOTH more often.

https://bugzilla.gnome.org/show_bug.cgi?id=746127